--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "opencv-python-headless>=4.11.0.86",
     "pillow>=12.1.0",
     "pymupdf>=1.26.7",
+    "fastapi>=0.115.0",
+    "uvicorn[standard]>=0.32.0",
+    "python-multipart>=0.0.9",
 ]
 
 [project.scripts]
