--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "uvicorn[standard]>=0.32.0",
     "python-multipart>=0.0.9",
     "piexif>=1.1.3",
+    "onnxruntime>=1.17.0",
 ]
 
 [project.urls]
